@@ -5,6 +5,10 @@
         * Moved WikiException & PluginException to the org.apache.jspwiki.api
         package.  This is a part of the overall transition to have a stable API.
 
+        * [JSPWIKI-291] Added patch from Thomas Engelschmidt to replace ORO
+        regexp library with Java built-in regexps for DenouncePlugin, as well
+        as DenouncePluginTest.  Thanks!
+
 2008-12-02  Andrew Jaquith <ajaquith AT apache DOT org>
 
         * 3.0.0-svn-21
